# zets

./: .gitignore  AGI_ROADMAP.md  CLAUDE.md  Cargo.toml  README.md  STATUS.md  build.rs  zets_v4_start.sh
.cargo/: config.toml
config/: zetson-infant.yaml
data/: README.md
data/autonomous/: hash_registry_sidecar.json  items_20260422_2118.jsonl  items_20260422_2121.jsonl  trust_scores.json
data/baseline/: programming_taxonomy_v1.atoms  programming_taxonomy_v1.manifest.json  v1_bootstrap.atoms  v1_bootstrap.manifest.json  v1_pet_facts.atoms  v1_pet_facts.manifest.json  v1_world_facts.atoms  v1_world_facts.manifest.json  v2_world_facts_large.atoms  v2_world_facts_large.manifest.json
data/benchmark/: calibration_set_easy.jsonl  calibration_set_hard.jsonl  calibration_set_trick.jsonl
data/benchmarks/: zets_baseline_20q_v1.jsonl  zets_expanded_32q_v1.jsonl
data/clients/: adrian.atoms  adrian.json  alex.json  arik.atoms  arik.json  ben.atoms  ben.json  bentz.atoms  bentz.json  elad.atoms  elad.json  eli.atoms  eli.json  idan.atoms  idan.json  maya.json  michel.atoms  michel.json  noam.json  or.atoms  or.json  roni.atoms  roni.json  rotem.atoms  rotem.json  sari.atoms  sari.json  shai.atoms  shai.json  tal.atoms  tal.json  tamar.json  yam.atoms  yam.json  yoram.atoms  yoram.json
data/conversations/: simulated_scrape_v1.jsonl  synthetic_v1.jsonl
data/core/: languages.tsv  relations.tsv  system_synsets.tsv
data/corpora/: pet_facts_v1.txt  world_facts_v1.txt  world_facts_v2_large.txt
data/hebrew/: core_vocabulary.tsv  meta.json  prefixes.tsv  suffixes.tsv  wiki_batch_0030.tsv
data/installer/: v1_bootstrap.zets_enc
data/personas/: adrian.persona.json  adrian.seed.jsonl  arik.persona.json  arik.seed.jsonl  ben.persona.json  ben.seed.jsonl  bentz.persona.json  bentz.seed.jsonl  elad.persona.json  elad.seed.jsonl  eli.persona.json  eli.seed.jsonl  idan.persona.json  idan.seed.jsonl  michel.persona.json  michel.seed.jsonl  or.persona.json  or.seed.jsonl  roni.persona.json  roni.seed.jsonl  rotem.persona.json  rotem.seed.jsonl  sari.persona.json  sari.seed.jsonl  shai.persona.json  shai.seed.jsonl  tal.persona.json  tal.seed.jsonl  yam.persona.json  yam.seed.jsonl  yoram.persona.json  yoram.seed.jsonl
data/seeds/: ar.tsv  ca.tsv  de.tsv  en.tsv  es.tsv  fr.tsv  he.tsv  it.tsv  ja.tsv  nl.tsv  pl.tsv  pt.tsv  ro.tsv  ru.tsv  sv.tsv  tr.tsv
data/self_learn/: graph_b_concepts.tsv  graph_b_suffixes.tsv  graph_b_word_order.tsv
data/test_vectors/: unp_v1.tsv
data/topics/: cs_programming.txt  geography.txt  linguistics.txt  mathematics.txt  medicine.txt  sciences.txt
docs/: 00_SYNTHESIS_STATE_20260424.md  00_ZETS_MASTER_BLUEPRINT.md  AGI.md  AGI_LITE_SPEC.md  AGI_ROADMAP.md  AI_CONSULTATION_PRIMER.md  AUTONOMOUS_WIKIPEDIA_SPEC.md  BENCHMARK_PLAN.md  CLAUDE_ACTIONS_AUDIT.md  COGNITIVE_TREE_SPEC.md  CONTENT_DOWNLOAD_SCRIPTS.md  DECISIONS_LOG.md  INVESTOR_BRIEF.md  LEARNING_CONTENT_GUIDE.md  MASTER_ARCHITECTURE.md  MISSION_P_R_WIKIPEDIA_SCALE.md  PARALLEL_WORK.md  PRODUCT.md  README.md  VISION_VS_REALITY.md  ZETSON_AGENT_MISSIONS.md  ZETS_LEARNING_HOW_IT_LEARNS.md  research_openclaw.md
docs/00_doctrine/: 20260424_brain_architecture_facts.md  20260424_mathematical_operators_REJECTED.md  ADR_GRAPH_TOPOLOGY_20260425.md  AGI_FRAMEWORK_synthesis_25042026.md  AI_COUNCIL_20260425.md  COUNCIL_METHODOLOGY_20260425.md  COUNCIL_PROMPT_TEMPLATE_20260425.md  COUNCIL_PROMPT_TEMPLATE_V2_20260425.md  ELDAD.md  MODEL_REGISTRY_20260425.md  PROOFS.md  README.md  council_prompt_helper.py  prompt_meta_research.json
docs/10_architecture/: 00_current_state.md  12_empathic_response.md  15_learning_content_v2.md  20260423_benchmark_spec_V1.md  20260423_benchmark_spec_V2.md  20_inventory_v1.md
docs/20_research/: 20260424_agi_simulation_assessment.md  20260424_agi_test_plan.md  20260424_brain_to_zets_complete.md  20260424_hebrew_root_compression_poc.md  README.md
docs/30_decisions/: 0004_capability_registry.md  20260423_variantica_transition_plan_V1.md  20260424_AGI_BLUEPRINT_v1.md  20260424_ARCH_DECISION_3_compressed_semitic_atom.md  20260424_ARCH_DECISION_atom_sigil_executor_doer.md  20260424_ARCH_DECISION_linguistic_representation.md  20260424_blueprint_reality_reconciliation.md  20260424_brain_equivalence_and_atom_examples.md  (+7 more)
mcp/: .gitignore  README.md  ask_ai.py  build_persona_snapshots.py  deploy.sh  multi_client.py  multi_client_v2.py  multi_client_v3.py  nginx-zets.conf  personas.py  zets-http.service  zets-mcp.service  zets_client.py  zets_http_api.py  zets_mcp_server.py
mcp/logs/: mcp.err  (+1 more)
py_testers/: README.md  test_7x7_parallel_search_v1.py  test_audio_learning_v1.py  test_bitflag_paths_quantize_v1.py  test_edge_compression_v1.py  test_folding_v1.py  test_licensing_trust_v1.py  test_media_graph_v1.py  test_mtreemap_layout_v1.py  test_multi_interface_v1.py  test_platform_abstraction_v1.py
research/: hopfield_enhanced.py  hopfield_poc.py
scripts/: agi_md_fixes.py  build_wiki_full.py  clarity_audit.py  council_iter1.py  council_iter2.py  council_iter3.py  extract_hewiktionary_v2.py  extract_multilingual.py  fetch_wikipedia.sh  methodology_consult.py
sim/: brain_sim.py  brain_sim_v2.py  brain_sim_v3.py  deep_conversation.py
src/: appraisal.rs  atom_persist.rs  atoms.rs  benchmarks.rs  bitflag_edge.rs  bootstrap.rs  brain_profile.rs  cognitive.rs  cognitive_modes.rs  compose.rs  concepts.rs  corpus_acquisition.rs  crypto.rs  dialogue.rs  distillation.rs  dreaming.rs  edge_extraction.rs  encrypted_installer.rs  engine.rs  ethics_core.rs  explain.rs  gemini_http.rs  hash_registry.rs  hopfield.rs  http_server.rs  inference.rs  ingestion.rs  learning_layer.rs  lexicon.rs  lib.rs  llm_adapter.rs  meta_learning.rs  metacognition.rs  mmap_core.rs  mmap_lang.rs  mtreemap.rs  pack.rs  path_mining.rs  persona.rs  phrase.rs  (+19 more)
tests/: regression_baseline.rs  test_unified_node_v1.py
(+442 files in other folders)
