[package]
name = "zets"
version = "0.1.0"
edition = "2021"
authors = ["Idan Eldad <idan@eldad.me>"]
description = "Deterministic knowledge graph engine for edge devices"
license = "MIT"
build = "build.rs"

# ZERO runtime dependencies. Build what's trivial ourselves.
# External crates only for crypto, OS bindings, or complex math we can't replicate.

[lib]
name = "zets"
path = "src/lib.rs"

[[bin]]
name = "zets"
path = "src/bin/zets.rs"

[[bin]]
name = "tester"
path = "src/bin/tester.rs"

[[bin]]
name = "scale_probe"
path = "src/bin/scale_probe.rs"

[[bin]]
name = "unp_bench"
path = "src/bin/unp_bench.rs"

[[bin]]
name = "compression_probe"
path = "src/bin/compression_probe.rs"

[[bin]]
name = "base37_probe"
path = "src/bin/base37_probe.rs"

[[bin]]
name = "multibase_probe"
path = "src/bin/multibase_probe.rs"

[[bin]]
name = "keyboard_probe"
path = "src/bin/keyboard_probe.rs"

[[bin]]
name = "wiki_poc"
path = "src/bin/wiki_poc.rs"

[dependencies]
# None. stdlib only.

[dev-dependencies]
# None.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "ask"
path = "src/bin/ask.rs"

[[bin]]
name = "translate"
path = "src/bin/translate.rs"

[[bin]]
name = "phrase"
path = "src/bin/phrase.rs"

[[bin]]
name = "learn-syntax"
path = "src/bin/learn_syntax.rs"
