[package]
name = "zets"
version = "0.1.0"
edition = "2021"
authors = ["Idan Eldad <idan@eldad.me>"]
description = "Deterministic knowledge graph engine for edge devices"
license = "MIT"
build = "build.rs"

# ZERO runtime dependencies. Build what's trivial ourselves.
# External crates only for crypto, OS bindings, or complex math we can't replicate.

[lib]
name = "zets"
path = "src/lib.rs"

[[bin]]
name = "zets"
path = "src/bin/zets.rs"

[[bin]]
name = "tester"
path = "src/bin/tester.rs"

[[bin]]
name = "scale_probe"
path = "src/bin/scale_probe.rs"

[[bin]]
name = "unp_bench"
path = "src/bin/unp_bench.rs"

[[bin]]
name = "compression_probe"
path = "src/bin/compression_probe.rs"

[[bin]]
name = "base37_probe"
path = "src/bin/base37_probe.rs"

[[bin]]
name = "multibase_probe"
path = "src/bin/multibase_probe.rs"

[[bin]]
name = "keyboard_probe"
path = "src/bin/keyboard_probe.rs"

[[bin]]
name = "wiki_poc"
path = "src/bin/wiki_poc.rs"

[dependencies]
memmap2 = "0.9"    # mmap for lazy loading
aes-gcm = "0.10"   # authenticated encryption for Stage 3

[dev-dependencies]
# None.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "ask"
path = "src/bin/ask.rs"

[[bin]]
name = "translate"
path = "src/bin/translate.rs"

[[bin]]
name = "phrase"
path = "src/bin/phrase.rs"

[[bin]]
name = "learn-syntax"
path = "src/bin/learn_syntax.rs"

[[bin]]
name = "self-test"
path = "src/bin/self_test.rs"

[[bin]]
name = "debug-disagreements"
path = "src/bin/debug_disagreements.rs"

[[bin]]
name = "lex-stats"
path = "src/bin/lex_stats.rs"

[[bin]]
name = "piece-graph"
path = "src/bin/piece_graph.rs"

[[bin]]
name = "debug-piece"
path = "src/bin/debug_piece.rs"

[[bin]]
name = "pack-write"
path = "src/bin/pack_write.rs"

[[bin]]
name = "pack-read"
path = "src/bin/pack_read.rs"

[[bin]]
name = "analyze-pool"
path = "src/bin/analyze_pool.rs"

[[bin]]
name = "mmap-read"
path = "src/bin/mmap_read.rs"

[[bin]]
name = "wal-demo"
path = "src/bin/wal_demo.rs"

[[bin]]
name = "crypto-demo"
path = "src/bin/crypto_demo.rs"

[[bin]]
name = "zets-engine"
path = "src/bin/engine_cli.rs"
