[package]
name = "zets"
version = "0.1.0"
edition = "2021"
authors = ["Idan Eldad <idan@eldad.me>"]
description = "Deterministic knowledge graph engine for edge devices"
license = "MIT"
build = "build.rs"

# ZERO runtime dependencies. Build what's trivial ourselves.
# External crates only for crypto, OS bindings, or complex math we can't replicate.

[lib]
name = "zets"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9"    # mmap for lazy loading
aes-gcm = "0.10"   # authenticated encryption for Stage 3

[dev-dependencies]
# None.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "pack-write"
path = "src/bin/pack_write.rs"

[[bin]]
name = "pack-read"
path = "src/bin/pack_read.rs"

[[bin]]
name = "mmap-read"
path = "src/bin/mmap_read.rs"

[[bin]]
name = "wal-demo"
path = "src/bin/wal_demo.rs"

[[bin]]
name = "crypto-demo"
path = "src/bin/crypto_demo.rs"

[[bin]]
name = "zets-engine"
path = "src/bin/engine_cli.rs"

[[bin]]
name = "system-graph-demo"
path = "src/bin/system_graph_demo.rs"

[[bin]]
name = "zets-scopes-demo"
path = "src/bin/scopes_demo.rs"

[[bin]]
name = "zets-agi-demo"
path = "src/bin/agi_demo.rs"

[[bin]]
name = "zets-cognitive-demo"
path = "src/bin/cognitive_demo.rs"

[[bin]]
name = "zets-scene-demo"
path = "src/bin/scene_demo.rs"

[[bin]]
name = "zets-zoology-demo"
path = "src/bin/zoology_demo.rs"

[[bin]]
name = "zets-brain-demo"
path = "src/bin/brain_demo.rs"

[[bin]]
name = "check-edges"
path = "src/bin/check_edges.rs"

[[bin]]
name = "gloss-sample"
path = "src/bin/gloss_sample.rs"

[[bin]]
name = "zets-personas-demo"
path = "src/bin/personas_demo.rs"


[[bin]]
name = "populate-edges"
path = "src/bin/populate_edges.rs"

[[bin]]
name = "personas-demo"
path = "src/bin/personas_demo.rs"

[[bin]]
name = "vision-decomposer"
path = "src/bin/vision_decomposer.rs"

[[bin]]
name = "context-demo"
path = "src/bin/context_demo.rs"

[[bin]]
name = "live-brain-demo"
path = "src/bin/live_brain_demo.rs"


[[bin]]
name = "autonomous-demo"
path = "src/bin/autonomous_demo.rs"

[[bin]]
name = "scale-test"
path = "src/bin/scale_test.rs"

[[bin]]
name = "planner-demo"
path = "src/bin/planner_demo.rs"
